# uno_online

./: Cargo.toml  README.md  build.rs  dist-workspace.toml  extra_info.md
.github/workflows/: release.yml
docs/: development.md  manual-test.md  ui_graphics_and_card.md
docs/en_translation/: development.md
openspec/changes/add-holiday-expansion/: design.md  proposal.md  tasks.md
openspec/changes/add-holiday-expansion/specs/holiday-expansion/: spec.md
openspec/changes/add-seven-zero-rule/: design.md  proposal.md  tasks.md
openspec/changes/add-seven-zero-rule/specs/holiday-expansion/: spec.md
openspec/changes/add-seven-zero-rule/specs/seven-zero-rule/: spec.md
openspec/changes/add-uninstall-command/: design.md  proposal.md  tasks.md
openspec/changes/add-uninstall-command/specs/managed-uninstall/: spec.md
openspec/changes/default-text-add-graphics-beta/: design.md  proposal.md  tasks.md
openspec/changes/default-text-add-graphics-beta/specs/graphics-beta-selection/: spec.md
openspec/changes/fix-wezterm-card-placement/: design.md  proposal.md  tasks.md
openspec/changes/fix-wezterm-card-placement/specs/wezterm-card-placement/: spec.md
openspec/changes/render-cards-with-terminal-images/: design.md  proposal.md  tasks.md
openspec/changes/render-cards-with-terminal-images/specs/terminal-card-images/: spec.md
openspec/changes/split-rendering-into-universal-and-wezterm-frontends/: design.md  proposal.md  tasks.md
openspec/changes/standardize-terminal-graphics-on-sixel/: design.md  proposal.md  tasks.md
src/: ai.rs  app.rs  card_art.rs  core.rs  environment.rs  frontend.rs  graphics.rs  i18n.rs  main.rs  screen.rs  termwez.rs  ui.rs  uninstall.rs  universal.rs  view.rs
tests/: cli.rs
(+2 files in other folders)
