[package]
name = "uno"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/Mcas-996/uno_online"
version = "2.0.1"

[dependencies]
crossterm = "0.29.0"
icy_sixel = "=0.5.0"
image = { version = "0.25.6", default-features = false, features = ["png"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3.2"
termwiz = "=0.23.3"
terminfo = "=0.9.0"
unicode-width = "0.2"

[lints.rust]
unsafe_code = "forbid"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
